# FileLoop

./: .coverage  README.md  cursor.rules  demo_quarantine.py  main.py  pyproject.toml  requirements.txt
scripts/: dev.sh  test.sh
src/: __init__.py  classifier.py  embeddings.py  scanner.py  ui.py  utils.py  visualization.py
tests/: __init__.py  test_scanner.py
